force-app/main/default/objects/Price_Book_Automation__c/Price_Book_Automation__c.object-meta.xml
<CustomObject>
    <label>Price Book Automation</label>
    <nameField>
        <displayFormat>Auto-{00000}</displayFormat>
        <label>Automation Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Book Automations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>