force-app/main/default/objects/Price_Book_Automation__c/fields/Reseller__c.field-meta.xml
<CustomField>
    <fullName>Reseller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Reseller</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Price Book Automations</relationshipLabel>
    <relationshipName>Price_Book_Automations</relationshipName>
    <type>Lookup</type>
</CustomField>