force-app/main/default/objects/Price_Book_Automation__c/validationRules/Cannot_fill_criterias_for_Reseller_Pric.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_fill_criterias_for_Reseller_Pric</fullName>
    <active>false</active>
    <errorConditionFormula>AND(!ISBLANK(Reseller__c),
$Setup.Bypass_Configuration__c.Account_Validation_Rule__c= FALSE,
				OR(!ISBLANK(TEXT(Region__c)),
							!ISBLANK(TEXT(Channel__c)),
							!ISBLANK(TEXT(Market__c)),
							!ISBLANK(TEXT(Partner_Status__c))
						)
			)</errorConditionFormula>
    <errorMessage>You&apos;re not allowed to fill any other criteria if you&apos;re creating a Reseller Price Book Automation. Please, select the Reseller and the Price Book only.</errorMessage>
</ValidationRule>