force-app/main/default/objects/Price_Book_Automation__c/listViews/All_Price_Book_Automations.listView-meta.xml
<ListView>
    <fullName>All_Price_Book_Automations</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>Region__c</columns>
    <columns>Market__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Partner_Status__c</columns>
    <columns>Reseller__c</columns>
    <columns>Price_Book__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Price Book Automations</label>
</ListView>